tests/files/type_checker_tests/should_pass/092.cmdr
//Test set operation type checks
a = 1;
x = [true];
x[a] = false;
