tests/files/type_checker_tests/should_fail/161.cmdr
//Should fail if operation types are incompatible
x = 1;
x /= true;
